# nba-playoff-predictor

./: .env.example  .gitignore  README.md  README_HF.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_app.yml  nightly_pipeline.yml
.streamlit/: config.toml  secrets.toml.example
app/: README.md  main.py
config/: settings.py
data/processed/: nba_app.duckdb  standings_cache.csv
data/raw/: games_2010-11_Playoffs.parquet  games_2010-11_Regular_Season.parquet  games_2011-12_Playoffs.parquet  games_2011-12_Regular_Season.parquet  games_2012-13_Playoffs.parquet  games_2012-13_Regular_Season.parquet  games_2013-14_Playoffs.parquet  games_2013-14_Regular_Season.parquet  games_2014-15_Playoffs.parquet  games_2014-15_Regular_Season.parquet  games_2015-16_Playoffs.parquet  games_2015-16_Regular_Season.parquet  games_2016-17_Playoffs.parquet  games_2016-17_Regular_Season.parquet  games_2017-18_Playoffs.parquet  games_2017-18_Regular_Season.parquet  games_2018-19_Playoffs.parquet  games_2018-19_Regular_Season.parquet  games_2019-20_Playoffs.parquet  games_2019-20_Regular_Season.parquet  games_2020-21_Playoffs.parquet  games_2020-21_Regular_Season.parquet  games_2021-22_Playoffs.parquet  games_2021-22_Regular_Season.parquet  games_2022-23_Playoffs.parquet  games_2022-23_Regular_Season.parquet  games_2023-24_Playoffs.parquet  games_2023-24_Regular_Season.parquet  (+36 more)
docs/: ARCHITECTURE_RATIONALE.md  UX_SPEC.md
models/: README.md
notebooks/: 01_eda.executed.ipynb  01_eda.ipynb
pipeline/: README.md  run_pipeline.py
portfolio/: index.html
(+52 files in other folders)
